@@ -2,7 +2,9 @@ cod-tools (unreleased)
 
   * Fixed:
     - test outputs for codcif2sdf and molcif2sdf;
-    - correcting a typo 'succesfully' -> 'successfully'.
+    - correcting a typo 'succesfully' -> 'successfully';
+    - codcif:
+      - adjusting iterator data types in datablock.c.
 
 cod-tools (2.5)
 
